force-app/main/default/objects/Crew__c/Crew__c.object-meta.xml
<CustomObject>
    <description>Crew roster with capacity and service line type. Each crew has a foreman, assigned techs, vehicle, and weekly capacity in hours. Drives capacity vs demand calculations in Forecasting console.</description>
    <label>Crew</label>
    <nameField>
        <label>Crew Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Crews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>