force-app/main/default/objects/Crew__c/fields/Available_For_Auto_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Available_For_Auto_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available For Auto Schedule</label>
    <type>Checkbox</type>
</CustomField>