force-app/main/default/objects/Crew__c/fields/Available_For_Scheduling__c.field-meta.xml
<CustomField>
    <fullName>Available_For_Scheduling__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Available for Scheduling</label>
    <type>Checkbox</type>
</CustomField>