force-app/main/default/objects/Crew__c/fields/Billable_Rate__c.field-meta.xml
<CustomField>
    <fullName>Billable_Rate__c</fullName>
    <label>Billable Rate ($/hr)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>