force-app/main/default/objects/Crew__c/fields/Crew_Size__c.field-meta.xml
<CustomField>
    <fullName>Crew_Size__c</fullName>
    <label>Crew Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>