force-app/main/default/objects/Crew__c/fields/Crew_Type__c.field-meta.xml
<CustomField>
    <fullName>Crew_Type__c</fullName>
    <label>Crew Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sod</fullName>
            </value>
            <value>
                <fullName>Plants</fullName>
            </value>
            <value>
                <fullName>Mixed</fullName>
                <default>true</default>
                <label>Mixed</label>
            </value>
            <value>
                <fullName>Aqua</fullName>
            </value>
            <value>
                <fullName>Irrigation</fullName>
            </value>
            <value>
                <fullName>Lawn Care</fullName>
            </value>
            <value>
                <fullName>Customer Care</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>