force-app/main/default/objects/Crew__c/fields/Current_Week_Hours__c.field-meta.xml
<CustomField>
    <fullName>Current_Week_Hours__c</fullName>
    <label>Current Week Hours</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>