force-app/main/default/objects/Crew__c/fields/Field_Manager__c.field-meta.xml
<CustomField>
    <fullName>Field_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Field Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Crews_FM</relationshipName>
    <type>Lookup</type>
</CustomField>