force-app/main/default/objects/Crew__c/fields/Headcount__c.field-meta.xml
<CustomField>
    <fullName>Headcount__c</fullName>
    <label>Headcount</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>