force-app/main/default/objects/Crew__c/fields/Home_Base_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Home_Base_Longitude__c</fullName>
    <label>Home Base Longitude</label>
    <precision>9</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>