force-app/main/default/objects/Crew__c/fields/Home_Origin__c.field-meta.xml
<CustomField>
    <fullName>Home_Origin__c</fullName>
    <label>Home Origin Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>