force-app/main/default/objects/Crew__c/fields/Max_Daily_Hours__c.field-meta.xml
<CustomField>
    <fullName>Max_Daily_Hours__c</fullName>
    <defaultValue>10</defaultValue>
    <label>Max Daily Hours</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>