force-app/main/default/objects/Crew__c/fields/Max_Jobs_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>Max_Jobs_Per_Day__c</fullName>
    <label>Max Jobs Per Day</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>