force-app/main/default/objects/Crew__c/fields/Max_Weekly_Hours__c.field-meta.xml
<CustomField>
    <fullName>Max_Weekly_Hours__c</fullName>
    <defaultValue>50</defaultValue>
    <label>Max Weekly Hours</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>