force-app/main/default/objects/Crew__c/fields/Overtime_Risk__c.field-meta.xml
<CustomField>
    <fullName>Overtime_Risk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Overtime Risk</label>
    <type>Checkbox</type>
</CustomField>