force-app/main/default/objects/Crew__c/fields/Service_Division__c.field-meta.xml
<CustomField>
    <fullName>Service_Division__c</fullName>
    <description>Classifies the crew operating line for console grouping: Production Landscape, Lawn, or Aqua.</description>
    <label>Service Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Production Landscape</fullName>
            </value>
            <value>
                <fullName>Lawn</fullName>
            </value>
            <value>
                <fullName>Aqua</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>