force-app/main/default/objects/Crew__c/fields/Service_Territory__c.field-meta.xml
<CustomField>
    <fullName>Service_Territory__c</fullName>
    <label>Service Territory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Charlotte NC</fullName>
            </value>
            <value>
                <fullName>Asheville NC</fullName>
            </value>
            <value>
                <fullName>Raleigh NC</fullName>
            </value>
            <value>
                <fullName>Greenville SC</fullName>
            </value>
            <value>
                <fullName>Columbia SC</fullName>
            </value>
            <value>
                <fullName>Triad NC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>