force-app/main/default/objects/Crew__c/fields/ServiceResource__c.field-meta.xml
<CustomField>
    <fullName>ServiceResource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FSL ServiceResource record mirroring this crew for scheduling and dispatch.</description>
    <label>Service Resource</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Crews</relationshipLabel>
    <relationshipName>Crews</relationshipName>
    <type>Lookup</type>
</CustomField>