force-app/main/default/objects/Crew__c/fields/Weekly_Capacity_Hours__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Capacity_Hours__c</fullName>
    <label>Weekly Capacity (Hours)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>